# newscorp-the-voice-position

./: .gitignore  README.md  get_completions.py  get_embeddings.py  pyproject.toml  txt_to_json.py
