[tool.poetry]
name = "newscorp-no"
version = "0.1.0"
description = ""
authors = ["Leo Orpilla III <hi@ldgrp.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"
openai = "^0.27.4"
tiktoken = "^0.3.3"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
